--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                   </div>
                </div>
                <div class="col-md-12">
-                  <a class="read_more" href="#">Read More</a>
+                  <a class="read_more" href="https://github.com/DPChanny">Read More<a></a>
                </div>
             </div>
          </div>
@@ -260,17 +260,17 @@
                <div class="row">
                   <div class="col-md-4">
                      <h3>Useful links</h3>
-                     <p>Useful links 설명글 </p>
+                     <p>DKSH </p>
                   </div>
                   <div class="col-md-4">
                      <div class="fid_box">
                         <h3>Find us  </h3>
                         <ul class="location_icon">
-                           <li><a href="#"><i class="fa fa-map-marker" aria-hidden="true"></i></a><br> 주소란</li>
+                           <li><a href="#"><i class="fa fa-map-marker" aria-hidden="true"></i></a><br> 서울특별시 강남구 대치동 도곡로64길 21</li>
                            <li><a href="#"><i class="fa fa-phone" aria-hidden="true"></i></a><br>
-                              (+82) 1234567890<br> (+82) 1234567890
+                              (+82) 02-2116-0114<br> 
                            </li>
-                           <li><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i></a><br> 테스트용@gmail.com</li>
+                           <li><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i></a><br> @gmail.com</li>
                         </ul>
                      </div>
                   </div>
@@ -282,7 +282,7 @@
                <div class="container">
                   <div class="row">
                      <div class="col-md-12">
-                        <p>© 2023 All Rights Reserved. Design by<a href="https://www.google.com/"> 테스트링크</a></p>
+                        <p>© 2023 All Rights Reserved. Design by<a href="https://dankook.sen.hs.kr"> arzen2312</a></p>
                      </div>
                   </div>
                </div>
